--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,18 +31,16 @@
     "@radix-ui/react-toggle": "^1.1.6",
     "@radix-ui/react-toggle-group": "^1.1.7",
     "@radix-ui/react-tooltip": "^1.2.4",
-    "@react-three/drei": "^10.7.6",
-    "@react-three/fiber": "^9.4.0",
+    "ajv": "^8.17.1",
     "axios": "^1.8.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
-    "cra-template": "1.2.0",
-    "date-fns": "^4.1.0",
-    "embla-carousel-react": "^8.6.0",
+    "date-fns": "^3.6.0",
+  "embla-carousel-react": "^8.6.0",
+  "next-themes": "^0.4.6",
     "input-otp": "^1.4.2",
     "lucide-react": "^0.507.0",
-    "next-themes": "^0.4.6",
     "react": "^19.0.0",
     "react-day-picker": "8.10.1",
     "react-dom": "^19.0.0",
@@ -53,14 +51,18 @@
     "sonner": "^2.0.3",
     "tailwind-merge": "^3.2.0",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.181.0",
     "vaul": "^1.1.2",
     "zod": "^3.24.4"
   },
   "scripts": {
     "start": "craco start",
+    "start:win": "set NODE_OPTIONS=--openssl-legacy-provider && craco start",
+    "start:win:3001": "set PORT=3001 && set NODE_OPTIONS=--openssl-legacy-provider && craco start",
+    "dev": "craco start",
     "build": "craco build",
-    "test": "craco test"
+    "test": "craco test",
+    "lint": "eslint \"src/**\" --ext .js,.jsx --report-unused-disable-directives",
+    "format": "prettier --write \"src/**\""
   },
   "browserslist": {
     "production": [
@@ -77,15 +79,17 @@
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
-    "@eslint/js": "9.23.0",
     "autoprefixer": "^10.4.20",
-    "eslint": "9.23.0",
+    "eslint": "8.57.1",
     "eslint-plugin-import": "2.31.0",
     "eslint-plugin-jsx-a11y": "6.10.2",
     "eslint-plugin-react": "7.37.4",
-    "globals": "15.15.0",
     "postcss": "^8.4.49",
     "tailwindcss": "^3.4.17"
+  },
+  "engines": {
+    "node": ">=18 <=20",
+    "npm": ">=8"
   },
   "packageManager": "yarn@1.22.22+sha512.a6b2f7906b721bba3d67d4aff083df04dad64c399707841b7acf00f6b133b7ac24255f2652fa22ae3534329dc6180534e98d17432037ff6fd140556e2bb3137e"
 }
