--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -2,20 +2,20 @@
 FROM node:latest AS build
 WORKDIR /app
 
-# Install deps
-COPY frontend/package*.json ./
+# Only package files first for better caching
+COPY package*.json ./
 RUN npm ci --legacy-peer-deps
 
-# Build
-COPY frontend/ ./
+# Copy the rest and build
+COPY . .
 RUN npm run build
 
 # ---- Runtime stage ----
 FROM node:latest AS runtime
 WORKDIR /app
-
-# Minimal runtime: just the static build + serve
 RUN npm i -g serve@14
+
+# bring over the built static files
 COPY --from=build /app/build ./build
 
 EXPOSE 3000
