Update Docker tags to include IMAGE_NAME and SHA

--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -46,5 +46,7 @@ jobs:
           file: ./frontend/Dockerfile
           platforms: linux/amd64
           push: true
-          tags: ${{ steps.meta.outputs.tags }}
+          tags: |
+            ${{ env.IMAGE_NAME }}:latest
+            ${{ env.IMAGE_NAME }}:${{ github.sha }}
           labels: ${{ steps.meta.outputs.labels }}
